# lumnicode

./: .env  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  skills-lock.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: backend_dev.yml  frontend_dev.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 328cb9de3afa_initial_migration_with_uuid4_support.py  b93e6ab5052f_add_tech_stack_project_type_template_.py  c8d5570adaeb_initial_db_structure.py
backend/src/: __init__.py  config.py
backend/src/api/: __init__.py  ai_generation.py  api_keys.py  assist.py  auth.py  debug.py  files.py  health.py  projects.py  streaming.py  websocket.py
backend/src/db/: database.py
backend/src/models/: __init__.py  models.py
backend/src/schemas/: __init__.py  schemas.py
backend/src/scripts/: ass_ai.py
backend/src/services/: ai_generation_service.py  api_key_manager.py  api_key_validator.py  auth.py  database.py  generation_graph.py  llm_provider.py  multi_provider_ai_service.py  storage_service.py
backend/src/services/ai_service/: __init__.py  code_analyzer.py  deployment_service.py  github_service.py  models.py  project_generator.py
backend/src/services/ai_service/providers/: google-gemini.py
docs/: developer_guidelines.md
frontend/: .dockerignore  .env.example  .prettierignore  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AIGenerationExample.tsx  (+13 more)
(+4 files in other folders)
